# TrajectIQ

./: .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_RENDER.md  README.md  SECURITY.md  TrajectIQ.spec  WINDOWS_BUILD.md  build-windows-full.bat  build-windows.bat  build.py  deploy.sh  docker-compose.ai-backend.yml  jest.config.json  next.config.ts  package.json  playwright.config.ts  push-and-release.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.py  tsconfig.json  upload_to_github.sh  worklog.md
.github/workflows/: build-release.yml  ci.yml  main.yml  playwright.yml  release.yml
backend/: Dockerfile  __init__.py  docker-compose.yml  main.py  render.yaml  requirements-dev.txt  requirements-render.txt  requirements.txt  server.py  setup.py
backend/ai_engines/: __init__.py  pipeline.py
backend/ai_engines/docling_parser/: __init__.py  engine.py  parser.py
backend/ai_engines/embedding_engine/: __init__.py  config.py  engine.py
backend/ai_engines/nlp_engine/: __init__.py  engine.py
backend/ai_engines/resume_parser/: __init__.py  engine.py
backend/ai_engines/semantic_matching/: __init__.py  engine.py
backend/ai_engines/skill_extraction/: __init__.py  engine.py
backend/api/: __init__.py  main.py  vector_search.py
backend/connectors/: __init__.py  ats_connector.py  email_connector.py
backend/core/: __init__.py  base_module.py  config.py  database.py  logger.py
backend/modules/: __init__.py  ai_detector.py  impact_scorer.py  resume_parser.py  scoring_engine.py  skill_evaluator.py  trajectory_analyzer.py
backend/orchestration/: __init__.py  pipeline.py
backend/schemas/: __init__.py  ai_detection_schema.py  candidate_schema.py  impact_schema.py  resume_schema.py  scoring_schema.py  skill_schema.py  trajectory_schema.py
backend/scripts/: generate_embeddings.py
backend/tests/: __init__.py  test_modules.py  test_quick.py
benchmarks/: run_benchmarks.py
data/samples/: job_requirements_senior_engineer.json  sample_data.json  sample_resume.txt
db/: custom.db
docs/: BIAS_DETECTION.md  CASE_STUDIES.md  COMPLIANCE.md  DEPLOYMENT_GUIDE.md  ENTERPRISE_DEPLOYMENT.md  INTEGRATION_GUIDE.md  SECURITY_CHECKLIST.md  SECURITY_HARDENING_REPORT.md  SOC2_CHECKLIST.md  TESTING.md  THREAT_MODEL.md  conf.py  index.rst
download/: trajectiq_preview.html
download/trajectiq_enterprise/: DELIVERY_CHECKLIST.md  LICENSE  README.md  build.py  requirements.txt
download/trajectiq_enterprise/docs/: DEPLOYMENT.md
examples/websocket/: frontend.tsx
frontend/: package.json
installer/: setup.iss
prisma/: schema.prisma  seed.ts
public/: manifest.json
src/: __init__.py  main.py
src/ai_enhancement/: __init__.py  semantic_layer.py
src/analytics/: __init__.py  analytics_engine.py  dashboard.py  exporters.py  report_generator.py
src/app/: globals.css  layout.tsx  page.tsx
src/collaboration/: __init__.py  notifications.py  presence.py  session_manager.py  websocket_server.py
src/components/: TrajectIQLogo.tsx
src/connectors/: __init__.py  ats_connector.py  email_connector.py
src/context/: AuthContext.tsx  index.ts
src/core/: __init__.py  analytics.py  api_gateway.py  config.py  database.py  encrypted_database.py  secure_logging.py  update_system.py
src/modules/: __init__.py  bias_detection.py  enhanced_ai_detection.py  enhanced_resume_parser.py  sandboxed_parser.py  scoring_engine.py
src/security/: __init__.py  integrity.py  jwt_auth.py  license.py  rbac.py  secure_transport.py
src/types/: dashboard.ts  index.ts
src/ui/: __init__.py  main_window.py
tests/: conftest.py  full-suite.spec.ts  setup.ts  test_bias_detection.py  test_connectors.py  test_integration.py  test_license_system.py  test_scoring_engine.py  test_security_rbac.py  test_trajectiq.py
tests/api/: routes.test.ts
tests/e2e/: full-suite.spec.ts
tests/lib/: scoring.test.ts
tools/: floating_license_server.py
web-ui/: README.md
web-ui/src/: globals.css  layout.tsx  page.tsx
(+120 files in other folders)
