[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectiq"
version = "3.0.3"
description = "Enterprise-grade AI-powered recruitment intelligence platform with deterministic scoring and bias detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TrajectIQ Team", email = "support@trajectiq.com"}
]
maintainers = [
    {name = "TrajectIQ Team", email = "support@trajectiq.com"}
]
keywords = [
    "recruitment",
    "hiring",
    "resume-screening",
    "bias-detection",
    "hr-automation",
    "applicant-tracking",
    "scoring-engine",
    "enterprise"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Human Resources",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0,<6.0.0",
    "requests>=2.28.0,<3.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "python-docx>=1.0.0,<2.0.0",
    "lxml>=4.9.0,<6.0.0",
    "cryptography>=41.0.0,<45.0.0",
    "bcrypt>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-benchmark>=4.0.0,<6.0.0",
    "black>=23.0.0,<26.0.0",
    "isort>=5.12.0,<7.0.0",
    "flake8>=6.0.0,<8.0.0",
    "pylint>=2.17.0,<4.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.3.0,<4.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.22.0",
    "myst-parser>=1.0.0",
]
enterprise = [
    "redis>=4.5.0,<6.0.0",
    "sqlcipher3>=0.5.0,<1.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "authlib>=1.2.0,<2.0.0",
]

[project.urls]
Homepage = "https://trajectiq.com"
Documentation = "https://docs.trajectiq.com"
Repository = "https://github.com/csreekhaanthch-dotcom/TrajectIQ"
Issues = "https://github.com/csreekhaanthch-dotcom/TrajectIQ/issues"
Changelog = "https://github.com/csreekhaanthch-dotcom/TrajectIQ/releases"

[project.scripts]
trajectiq = "src.main:main"
trajectiq-license = "tools.license_generator:main"

[project.gui-scripts]
trajectiq-gui = "src.main:main_gui"

[tool.setuptools]
packages = ["src", "src.core", "src.modules", "src.security", "src.ui", "src.connectors"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.sql"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "node_modules"]
skips = ["B101", "B601"]
